--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "homepage": "https://luizrodrigues12.github.io/github-finder",
   "name": "github-finder",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
